@@ -6,6 +6,8 @@ import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 
 import java.math.BigDecimal;
+import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
@@ -52,7 +54,7 @@ class OrderTest {
         OrderLine line = new OrderLine("PRODUCT-1", 1, new BigDecimal("10.00"));
 
         assertThrows(OrderValidationException.class,
-                () -> Order.create("ORDER-1", List.of(line, null)));
+                () -> Order.create("ORDER-1", Arrays.asList(line, null)));
     }
 
     @Test
